WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72274
[Qt] REGRESSION(100123): It made inspector tests crash
https://bugs.webkit.org/show_bug.cgi?id=72274
Summary
[Qt] REGRESSION(100123): It made inspector tests crash
Csaba Osztrogonác
Reported
2011-11-14 07:45:27 PST
After 100123 many of inspector/timeline tests and inspector/user-metrics.html crash:
http://build.webkit.sed.hu/results/x86-64%20Linux%20Qt%20Debug/r100126%20%2818836%29/results.html
Attachments
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2011-11-14 07:46:35 PST
You can easily reproduce crashes with: $ Tools/Scripts/old-run-webkit-tests inspector/timeline
Csaba Osztrogonác
Comment 2
2011-11-14 08:24:22 PST
I skipped crashing tests until fix to make buildbot happy:
http://trac.webkit.org/changeset/100144
Simon Hausmann
Comment 3
2011-11-15 02:34:41 PST
Committed
r100256
: <
http://trac.webkit.org/changeset/100256
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug