[Qt] REGRESSION(100123): It made inspector tests crash https://bugs.webkit.org/show_bug.cgi?id=72274

Reviewed by Tor Arne Vestbø.

Source/WebCore:

* platform/qt/RenderThemeQStyle.h: Remove uninitialized and duplicated
m_page member that should really come from RenderThemeQt.

LayoutTests:

* platform/qt/Skipped: Unskip passing tests.

git-svn-id: svn://svn.chromium.org/blink/trunk@100256 bbb929c8-8fbe-4397-9dbb-9b2b20218538