third_party/WebKit/Source/WebCore/platform/qt/RenderThemeQStyle.h
@@ -109,8 +109,6 @@ private:
 
     QStyle* fallbackStyle() const;
 
-    Page* m_page;
-
 #ifdef Q_OS_MAC
     int m_buttonFontPixelSize;
 #endif
